--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>猜猜哪台車</title>
+  <link rel="icon" type="image/png" href="favicon.png">
   <style>
     :root {
       --bg-color: #f0f2f5;
