--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- 🌐 Open Graph metadata for link previews -->
   <meta property="og:title" content="猜猜哪台車！🚗 遊戲挑戰">
   <meta property="og:description" content="輸入車名，在 10 次機會內猜對是哪一台車，挑戰你的汽車知識！">
-  <meta property="og:image" content="https://jaydenwang1221.github.io/preview/">
+  <meta property="og:image" content="https://jaydenwang1221.github.io/-/preview.jpg"">
   <meta property="og:url" content="https://jaydenwang1221.github.io/">
   <meta property="og:type" content="website">
 
