--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
   <meta property="og:title" content="猜猜哪台車！🚗 遊戲挑戰">
-  <meta property="og:description" content="輸入車名，在 10 次機會內猜對是哪一台車，挑戰你的汽車知識！">
+  <meta property="og:description" content="輸入車名，在 10 次機會內猜對是哪一台A/T車，挑戰你的極速領域知識！">
   <meta property="og:image" content="https://jaydenwang1221.github.io/car-guess/preview.jpg"">
   <meta property="og:url" content="https://jaydenwang1221.github.io/">
   <meta property="og:type" content="website">
@@ -257,6 +257,7 @@
 
     <button id="ruleBtn">📘 遊戲規則</button>
     <button id="quitBtn" onclick="location.reload()">🔙 離開遊戲</button>
+    <button id="infoBtn">ℹ️ 遊戲資訊</button>
 
     <table>
       <thead>
@@ -334,6 +335,18 @@ document.addEventListener("DOMContentLoaded", () => {
     if (e.key === "Enter") submitGuess();
   });
 });
+<div id="infoPopup" class="popup">
+  <div class="popup-content">
+    <span class="close-btn" onclick="closeInfoPopup()">❌</span>
+    <h2>遊戲資訊</h2>
+    <ul style="text-align: left;">
+      <li>製作人：淺愛</li>
+      <li>收錄車輛：共 251 台 A/T 車</li>
+      <li>資料日期：2025 年 7 月 23 日</li>
+    </ul>
+  </div>
+</div>
+
   </script>
 </body>
 </html>
