--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
   <meta property="og:title" content="猜猜哪台車！🚗 遊戲挑戰">
   <meta property="og:description" content="輸入車名，在 10 次機會內猜對是哪一台A/T車，挑戰你的極速領域知識！">
-  <meta property="og:image" content="https://jaydenwang1221.github.io/car-guess/preview.jpg"">
+  <meta property="og:image" content="https://jaydenwang1221.github.io/car-guess/preview.jpg">
   <meta property="og:url" content="https://jaydenwang1221.github.io/">
   <meta property="og:type" content="website">
 
@@ -348,5 +348,6 @@ document.addEventListener("DOMContentLoaded", () => {
 
 
   </script>
+  
 </body>
 </html>
